<resources>
    <string name="app_name">MTKLogger</string>
    <string name="notification_title_network">Network log</string>
    <string name="notification_title_mobile">Mobile log</string>
    <string name="notification_title_modem">Modem log</string>
    <string name="notification_title">MTKLogger is running</string>
    <string name="notification_on_summary_suffix">is on.</string>
    <string name="notification_on_summary_suffixes">are on.</string>
    <string name="notification_off_summary_suffix">is off.</string>
    <string name="notification_off_summary_suffixes">are off.</string>
    <string name="notification_nearly_out_of_storage">Log storage is running out.</string>
    <string name="notification_out_of_storage_summary">Click to get more information.</string>
    <string name="network_log_name">NetworkLog</string>
    <string name="mobile_log_name">MobileLog</string>
    <string name="modem_log_name">ModemLog</string>
    <string name="dual_modem_log_name">DualModemLog</string>
    <string name="tag_log_name">TagLog</string>
    <string name="menu_settings">Settings</string>
    <string name="mobilelog_unselected">There is no type of mobilelog seleted, it will not be started!</string>
    <string name="no_log_on">There is no log on!</string>
    <string name="log_path_str">Log path</string>
    <string name="log_used_storage">Used</string>
    <string name="log_free_storage">Free</string>
    <string name="log_start">%s recording</string>
    <string name="log_stop">%s stopped</string>
    <string name="log_unselected">%s disabled</string>
    <string name="time_default">0:00:00</string>
    <string name="phone_storage">Phone storage</string>
    <string name="sd_card">SD Card</string>
    <string name="log_path_not_exist">The storage path %s is not exist!</string>
    <string name="low_storage_warning_dialog_title">Low Storage Warning</string>
    <string name="low_storage_warning_dialog_msg">The free space is lower than %dM, please clear storage otherwise logs will stop automaticly soon!</string>
    <string name="waiting_dialog_title_start_log">Starting logs</string>
    <string name="waiting_dialog_message_start_log">Waiting for starting logs...</string>
    <string name="waiting_dialog_title_stop_log">Stopping logs</string>
    <string name="waiting_dialog_message_stop_log">Waiting for stopping logs...</string>
    <string name="waiting_dialog_title_poll_log">Polling logs</string>
    <string name="waiting_dialog_message_poll_log">Waiting for polling logs...</string>
    <string name="general_settings_title">General Settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="enable_tag_log_title">Enable Tag Log</string>
    <string name="enable_tag_log_summary">Enable or disable tag log function</string>
    <string name="enable_exception_reporter_title">Enable Exception Reporter</string>
    <string name="enable_exception_reporter_summary">Enable or disable Exception Reporter</string>
    <string name="enable_ui_debug_mode_title">Enable UI Debug Mode</string>
    <string name="enable_ui_debug_mode_summary">Enable or disable UI Debug Mode</string>
    <string name="log_storage_location_title">Log storage location</string>
    <string name="run_command_title">Run Command</string>
    <string name="run_command_summary">You could write shell command here</string>
    <string name="run_exception_history">Open Exception History</string>
    <string name="run_exception_history_summary">You could open Exception History to view exceprion report list.</string>
    <string name="warning_no_permission_for_setting">Only device owner can modify log configurations.</string>
    <string name="mobilelog_settings">MobileLog Settings</string>
    <string name="enable_mobilelog">Enable MobileLog</string>
    <string name="enable_android_log_title">Android Log</string>
    <string name="enable_android_log_summary">Enable or disable android log</string>
    <string name="enable_kernel_log_title">Kernel Log</string>
    <string name="enable_kernel_log_summary">Enable or disable kernel log</string>
    <string name="enable_bluetooth_log_title">Bluetooth Log</string>
    <string name="enable_bluetooth_log_summary">Enable or disable bluetooth log</string>
    <string name="limit_log_size_title">Limit Log Size(MB)</string>
    <string name="limit_log_size_summary">Recycle log when it reaches the limit log size</string>
    <string name="limit_log_size_dialog_message" formatted="false">The limit size of %s should be between %dMB and %dMB(Size of %s).</string>
    <string name="start_automatically_title">Start Automatically</string>
    <string name="start_automatically_mobile_summary">Start Mobile Log automatically when next bootup</string>
    <string name="modemlog_settings">ModemLog Settings</string>
    <string name="enable_modemlog">Enable ModemLog</string>
    <string name="log_mode_title">Log Mode</string>
    <string name="log_mode_summary">Set modem log mode</string>
    <string name="start_automatically_modem_summary">Start Modem Log automatically when next bootup</string>
    <string name="networklog_settings">NetworkLog Settings</string>
    <string name="enable_networklog">Enable NetworkLog</string>
    <string name="start_automatically_network_summary">Start Network Log automatically when next bootup</string>
    <string name="networklog_ping_title">Enable environment check</string>
    <string name="networklog_ping_summary">Check network running environment at stopping time. This may take a few seconds.</string>
    <string name="title_activity_log_folder_list">Clear MTKLog Files</string>
    <string name="cancel_menu">Cancel</string>
    <string name="clear_all_menu">Clear All</string>
    <string name="clear_all_dlg_title">Clear All</string>
    <string name="message_delete_all_log">Clear all logs?</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="clear_dialog_title">Clearing log</string>
    <string name="clear_dialog_content">Please wait for a moment...</string>
    <string name="selected_item_count">%d selected</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_unselect_all">Unselect all</string>
    <string name="menu_clear">Clear</string>
    <string name="clear_non_selected_item">Please select at least one of the log folder!</string>
    <string name="clear_dlg_title">Clear</string>
    <string name="message_deletelog">Clear the selected logs?</string>
    <string name="error_deamon_unable">NativeUnable</string>
    <string name="error_storage_not_ready">Storage is not ready yet</string>
    <string name="error_storage_full">Storage is full</string>
    <string name="error_send_cmd_fail">Send command fail</string>
    <string name="error_deamon_die">Native is dead</string>
    <string name="error_unsupport_log">Unsupported log type</string>
    <string name="error_storage_unavailable">Log storage is no available any more.</string>
    <string name="error_log_folder_deleted">Current running log folder was lost.</string>
    <string name="error_cmd_timeout">Command timeout.</string>
    <string name="error_create_log_folder_fail">Fail to create log folder.</string>
    <string name="error_wait_sd_timeout">Wait storage ready timeout.</string>
    <string name="error_common">Error.</string>
    <string name="info_wait_sd_ready">Waiting storage ready...</string>
    <string name="taglog">Tag Log</string>
    <string name="taglog_title">Tag Log</string>
    <string name="taglog_title_warning">Tag Log Warning!</string>
    <string name="taglog_title_no_space">Lack of Space Warning!</string>
    <string name="taglog_msg_no_space">"About %sMB more space is needed for taglog.
 Would you like to clear some logs or cancel taglog?"</string>
    <string name="taglog_msg_input">"Tag Log will compress current logs to save the storage.

Please input your tag name:"</string>
    <string name="taglog_msg_logtool_stopped">All log tools are stopped! Would you like to start all log tools?</string>
    <string name="taglog_msg_zip_log_fail">Compressing logs failed!</string>
    <string name="taglog_msg_no_sdcard">"The SD card doesn't exist!"</string>
    <string name="taglog_msg_sdcard_not_writtable">The SD Card is not writtable!</string>
    <string name="taglog_msg_compress_log">Compressing log files ...</string>
    <string name="taglog_run_in_background_button">Run in Background</string>
    <string name="taglog_busy">"Tag Log During compressing log,Tag Log can't handle other exception!"</string>
    <string name="taglog_compress_done">Tag Log Compressing logs done!</string>
    <string name="taglog_exit">Tag Log Exit!</string>
    <string name="default_mode_value">2</string>
    <string name="memorydump_done">"Finished dumping memory!
Click OK to reset modem.
The dump file is:"</string>
    <string name="dump_warning">Modem Log Warning</string>
    <string name="reset_modem_title">Reset Modem</string>
    <string name="reset_modem_msg">Modem resetting...</string>
    <string name="send_filter_fail_title">Modem Log Warning</string>
    <string name="send_filter_fail_msg">Found no catcher_filter.bin,please put it into /sdcard/mtklog/config</string>
    <string name="app_debugutils">Debug Utils</string>
    <string name="preferences_aee_settings">Android Debug Settings</string>
    <string name="preference_aeemode">AEE Working Mode</string>
    <string name="title_preference_aeemode">Debug Level</string>
    <string name="summary_preference_aeemode">Options for exception level, db location, notification</string>
    <string name="dialog_title_list_preference_aeemode">Select Debug Level</string>
    <string name="preference_dal_setting">DAL Setting</string>
    <string name="title_preference_dal_setting">DAL Setting</string>
    <string name="summary_preference_dal_setting">Options for enable red screen or not</string>
    <string name="dialog_title_list_preference_dal_setting">DAL Setting Option</string>
    <string name="preference_cleardal">Clear DAL</string>
    <string name="summary_preference_cleardal">Clear Red Screen Alert</string>
    <string name="title_preference_cleardal">Clear Red Screen</string>
    <string name="title_preferences_device_maintain">Maintain Device</string>
    <string name="preferences_device_maintain">MaintainDevice</string>
    <string name="preference_cleandata">Clean Device</string>
    <string name="summary_preference_cleandata">Clean up /data partition</string>
    <string name="title_preference_cleandata">Clean device</string>
    <string name="msg_system_time_reset">Log recording time was reset to 0 when system time was reset.</string>
    <string name="exception_app_name">Exception reporter</string>
    <string name="log2server_dialog_title">Exception reporter</string>
    <string name="log2server_dialog_message">"has stopped unexpectedly.
Report this exception to MediaTek server?"</string>
    <string name="log2server_btn_report">OK</string>
    <string name="log2server_btn_cancel">Cancel</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Please describe your operation steps before the exception happened</string>
    <string name="submitter">Submitter</string>
    <string name="submitter_tip">Please input the submitter.</string>
    <string name="submitter_hint">ID or name</string>
    <string name="error_tip">Send report fail!</string>
    <string name="process_name">Process name</string>
    <string name="build_version">Build version</string>
    <string name="exception_class">Exception class</string>
    <string name="exception_level">Exception level</string>
    <string name="wifi_username">User name</string>
    <string name="exception_type">Exception type</string>
    <string name="device_name">Device name</string>
    <string name="date_time">Date time</string>
    <string name="success_tip">Send report success!</string>
</resources>