<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/modem_log_name" android:key="modemlog_preference_screen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/modemlog_settings" android:key="modemlog_category">
        <CheckBoxPreference android:title="@string/enable_modemlog" android:key="modemlog_switch" android:defaultValue="true" />
    </PreferenceCategory>
    <ListPreference android:entries="@array/mode_list_preference" android:title="@string/log_mode_title" android:key="log_mode" android:summary="@string/log_mode_summary" android:defaultValue="@string/default_mode_value" android:dialogTitle="@string/log_mode_title" android:entryValues="@array/mode_value_list_preference" />
    <EditTextPreference android:title="@string/limit_log_size_title" android:key="modemlog_logsize" android:summary="@string/limit_log_size_summary" android:defaultValue="600" />
    <CheckBoxPreference android:title="@string/start_automatically_title" android:key="modemlog_autostart" android:summary="@string/start_automatically_modem_summary" android:defaultValue="true" />
</PreferenceScreen>